[project]
name = "rise"
version = "0.1.0"
description = ""
authors = [
    {name = "kaban",email = "artugachev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-vlc (>=3.0.21203,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pynput (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
